--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1245,17 +1245,28 @@ footer h6{
         text-align: center;
     }
 
-    #what-we-made-before .menu{
-        display: none !important;
+    #what-we-made-before .menu .menu-ul, #what-we-made-before .menu, #what-we-made-before li{
+       width: 0% !important;
+       gap: 0 !important;
+       visibility: hidden;
+       height: 0% !important;
+    }
+
+    header .menu ul, header .menu li, header .cart, header .authorization{
+        width: 0% !important;
+        gap: 0 !important;
+        height: 0% !important;
+        visibility: hidden;
     }
 
     .what-we-do-content, .what-we-do{
         width: 100% !important;
         padding: 0 !important;
+        margin: 0 !important;
     }
 
     #what-we-do .single-card{
-        width: 90% !important;
+        width: 380px !important;
     }
 
 }
@@ -1273,5 +1284,11 @@ footer h6{
 
     .home-heading{
         gap: 50px !important;
+    }
+}
+
+@media(max-width:320px){
+    #what-we-do .single-card{
+        width: 300px !important;
     }
 }
