--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1292,6 +1292,11 @@ footer h6{
 }
 
 @media(max-width:320px){
+
+    #home-page .home-heading h1{
+        font-size: 2.5rem !important;
+    }
+
     #what-we-do .single-card{
         width: 300px !important;
     }
